Form styles improved on mobile version, fixed copyright notice in files.

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -2,7 +2,7 @@
  * Content-Mobile Style Sheet
  * Vehicles-Promo-Template
  *
- * Copyright (c) 2017. by Way2CU, http://way2cu.com
+ * Copyright (c) 2018. by Way2CU, http://way2cu.com
  * Authors: Anusic Vladimir
  */
 
@@ -23,7 +23,7 @@ section#info {
 section#contact {
 	background-color: @color_form_background;
 	color: @color_white;
-	padding: 2rem 0.5rem;
+	padding: @section_spacing 0.5rem;
 
 	form {
 		display: block;
@@ -33,7 +33,7 @@ section#contact {
 		label {
 			display: block;
 			width: 100%;
-			margin-bottom: 1.5rem;
+			margin-bottom: 2rem;
 
 			span {
 				display: block;
@@ -103,6 +103,9 @@ section#contact {
 
 	a {
 		pointer-events: auto;
+		display: block;
+		margin: 0 auto;
+		margin-top: 2rem;
 
 		figure.logo {
 			display: block;
