--- a/site/styles/footer_mobile.less
+++ b/site/styles/footer_mobile.less
@@ -2,7 +2,7 @@
  * Footer Mobile Style Sheet
  * Vehicles-Promo-Template
  *
- * Copyright (c) 2017. by Way2CU, http://way2cu.com
+ * Copyright (c) 2018. by Way2CU, http://way2cu.com
  * Authors: Anusic Vladimir
  */
 
@@ -68,6 +68,7 @@ footer {
 
 			&.toggle_overview_visibility {
 				opacity: 1;
+				pointer-events: auto;
 				transition: opacity 0.3s;
 			}
 
